@@ -2,9 +2,12 @@ package gearth.ui.extensions.executer;
 
 import gearth.Main;
 import gearth.ui.extensions.authentication.Authenticator;
+import org.omg.CORBA.Environment;
 
+import java.io.BufferedReader;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.net.URISyntaxException;
 import java.nio.file.*;
 import java.util.Arrays;
@@ -83,12 +86,59 @@ public class NormalExtensionRunner implements ExtensionRunner {
     public void tryRunExtension(String path, int port) {
         try {
             String filename = Paths.get(path).getFileName().toString();
-            String execCommand = ExecutionInfo.getExecutionCommand(getFileExtension(path))
-                    .replace("{path}", path)
-                    .replace("{port}", port+"")
-                    .replace("{filename}", filename)
-                    .replace("{cookie}", Authenticator.generateCookieForExtension(filename));
-            Runtime.getRuntime().exec(execCommand);
+            String[] execCommand = ExecutionInfo.getExecutionCommand(getFileExtension(path));
+            execCommand = Arrays.copyOf(execCommand, execCommand.length);
+            String cookie = Authenticator.generateCookieForExtension(filename);
+            for (int i = 0; i < execCommand.length; i++) {
+                execCommand[i] = execCommand[i]
+                        .replace("{path}", path)
+                        .replace("{port}", port+"")
+                        .replace("{filename}", filename)
+                        .replace("{cookie}", cookie);
+            }
+            ProcessBuilder pb = new ProcessBuilder(execCommand);
+//            Process proc = Runtime.getRuntime().exec(execCommand);
+            Process proc = pb.start();
+
+            if (Main.hasFlag(ExtensionRunner.SHOW_EXTENSIONS_LOG)) {
+                String sep = "" + System.lineSeparator();
+                synchronized (System.out) {
+                    System.out.println(path + sep + "Launching" + sep + "----------" + sep);
+                }
+
+                BufferedReader stdInput = new BufferedReader(new
+                        InputStreamReader(proc.getInputStream()));
+
+                new Thread(() -> {
+                    try {
+                        String line;
+                        while((line = stdInput.readLine()) != null) {
+                            synchronized (System.out) {
+                                System.out.println(path + sep + "Output" + sep + line + sep + "----------" + sep);
+                            }
+                        }
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                    }
+                }).start();
+
+                BufferedReader stdError = new BufferedReader(new
+                        InputStreamReader(proc.getErrorStream()));
+
+                new Thread(() -> {
+                    try {
+                        String line;
+                        while((line = stdError.readLine()) != null) {
+                            synchronized (System.out) {
+                                System.out.println(path + sep + "Error" + sep + line + sep + "----------" + sep);
+                            }
+                        }
+                    } catch (IOException e) {
+                        e.printStackTrace();
+                    }
+                }).start();
+
+            }
         } catch (IOException e) {
             e.printStackTrace();
         }
